--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -5,7 +5,7 @@ on:
     branches: ['main']
   pull_request:
   release:
-    types: [created]
+    types: [prereleased]
 
 jobs:
   test:
@@ -66,7 +66,9 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    steps:
+  steps:
+      - name: Debug print github.event
+        run: echo "${{ toJson(github.event) }}"
       - uses: actions/checkout@v2
         name: Checkout repository
       - uses: actions-rs/toolchain@v1
