--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -8,61 +8,61 @@ on:
     types: [prereleased]
 
 jobs:
-  test:
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        rust: [stable, nightly]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v2
-        name: Checkout repository
-      - uses: actions-rs/toolchain@v1
-        name: Set up toolchain
-        with:
-          profile: minimal
-          toolchain: ${{ matrix.rust }}
-          override: true
-      - uses: Swatinem/rust-cache@v2
-        name: Cache toolchain and dependencies
-      - uses: actions-rs/cargo@v1
-        name: Build crate
-        with:
-          command: build
-          args: --all-targets
-      - uses: actions-rs/cargo@v1
-        name: Test crate
-        with:
-          command: test
+  # test:
+  #   strategy:
+  #     matrix:
+  #       os: [ubuntu-latest]
+  #       rust: [stable, nightly]
+  #   runs-on: ${{ matrix.os }}
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #       name: Checkout repository
+  #     - uses: actions-rs/toolchain@v1
+  #       name: Set up toolchain
+  #       with:
+  #         profile: minimal
+  #         toolchain: ${{ matrix.rust }}
+  #         override: true
+  #     - uses: Swatinem/rust-cache@v2
+  #       name: Cache toolchain and dependencies
+  #     - uses: actions-rs/cargo@v1
+  #       name: Build crate
+  #       with:
+  #         command: build
+  #         args: --all-targets
+  #     - uses: actions-rs/cargo@v1
+  #       name: Test crate
+  #       with:
+  #         command: test
 
-  lint:
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        rust: [stable, nightly]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v2
-        name: Checkout repository
-      - uses: actions-rs/toolchain@v1
-        name: Set up toolchain
-        with:
-          profile: minimal
-          toolchain: ${{ matrix.rust }}
-          override: true
-          components: rustfmt, clippy
-      - uses: Swatinem/rust-cache@v2
-        name: Cache toolchain and dependencies
-      - uses: actions-rs/cargo@v1
-        name: Check code with cargo fmt
-        with:
-          command: fmt
-          args: --all -- --check
-      - uses: actions-rs/cargo@v1
-        name: Check code with cargo clippy
-        with:
-          command: clippy
-          args: --all-targets -- -D warnings
+  # lint:
+  #   strategy:
+  #     matrix:
+  #       os: [ubuntu-latest]
+  #       rust: [stable, nightly]
+  #   runs-on: ${{ matrix.os }}
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #       name: Checkout repository
+  #     - uses: actions-rs/toolchain@v1
+  #       name: Set up toolchain
+  #       with:
+  #         profile: minimal
+  #         toolchain: ${{ matrix.rust }}
+  #         override: true
+  #         components: rustfmt, clippy
+  #     - uses: Swatinem/rust-cache@v2
+  #       name: Cache toolchain and dependencies
+  #     - uses: actions-rs/cargo@v1
+  #       name: Check code with cargo fmt
+  #       with:
+  #         command: fmt
+  #         args: --all -- --check
+  #     - uses: actions-rs/cargo@v1
+  #       name: Check code with cargo clippy
+  #       with:
+  #         command: clippy
+  #         args: --all-targets -- -D warnings
 
   release:
     runs-on: ubuntu-latest
