--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -67,8 +67,16 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - name: Debug print github.event
-        run: echo "${{ toJson(github.event) }}"
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        draft: false
+        prerelease: false
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/checkout@v2
         name: Checkout repository
       - uses: actions-rs/toolchain@v1
@@ -84,21 +92,21 @@ jobs:
       - name: Upload quincy-client binary
         uses: actions/upload-release-asset@v1
         with:
-          upload_url: ${{ github.event.release.upload_url }}
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./target/release/quincy-client
           asset_name: quincy-client
           asset_content_type: application/octet-stream
       - name: Upload quincy-server binary
         uses: actions/upload-release-asset@v1
         with:
-          upload_url: ${{ github.event.release.upload_url }}
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./target/release/quincy-server
           asset_name: quincy-server
           asset_content_type: application/octet-stream
       - name: Upload quincy-users binary
         uses: actions/upload-release-asset@v1
         with:
-          upload_url: ${{ github.event.release.upload_url }}
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./target/release/quincy-users
           asset_name: quincy-users
           asset_content_type: application/octet-stream
