--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -76,7 +76,7 @@ jobs:
         draft: false
         prerelease: false
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.TOKEN }}
 
     - uses: actions/checkout@v2
       name: Checkout repository
