--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -67,12 +67,18 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps: #line 69
+    - name: Branch name
+            id: branch_name
+            run: |
+              echo ::set-output name=SOURCE_NAME::${GITHUB_REF#refs/*/}
+              echo ::set-output name=SOURCE_BRANCH::${GITHUB_REF#refs/heads/}
+              echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        tag_name: ${{ steps.branch_name.outputs.SOURCE_TAG }}
+        release_name: ${{ steps.branch_name.outputs.SOURCE_TAG }}
         draft: false
         prerelease: false
       env:
