--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -67,6 +67,8 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps: #line 69
+    - name: Debug print github
+      run: echo "${{ toJson(github) }}"    
     - name: Branch name
       id: branch_name
       run: |
