--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -79,8 +79,8 @@ jobs:
       id: create_release
       uses: actions/create-release@v1
       with:
-        tag_name: ${{ steps.branch_name.outputs.SOURCE_TAG }}
-        release_name: ${{ steps.branch_name.outputs.SOURCE_TAG }}
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
         draft: false
         prerelease: false
       env:
