--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -79,8 +79,8 @@ jobs:
       id: create_release
       uses: actions/create-release@v1
       with:
-        tag_name: ${{ GITHUB_REF_NAME }}
-        release_name: Release ${{ GITHUB_REF_NAME }}
+        tag_name: "$GITHUB_REF_NAME"
+        release_name: "Release $GITHUB_REF_NAME"
         draft: false
         prerelease: false 
       env:
