--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -68,7 +68,7 @@ jobs:
     runs-on: ubuntu-latest
     steps: #line 69
     - uses: actions/checkout@v2
-      name: Set env
+    - name: Set env
       run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV    
     - name: Debug print github
       run: echo "${{ toJson(github) }}"    
