--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -3,9 +3,9 @@ name: CI
 on:
   push:
     branches: ['main']
+    tags:
+      - 'v*'
   pull_request:
-  release:
-    types: [prereleased]
 
 jobs:
   # test:
@@ -64,66 +64,85 @@ jobs:
   #         command: clippy
   #         args: --all-targets -- -D warnings
  
-  release: 
+
+  release:
+    name: Release Linux Binaries
     runs-on: ubuntu-latest
-    steps: #line 69
-    - uses: actions/checkout@v2
-    - name: Set env
-      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV    
-    - name: Debug print github
-      run: echo "${{ toJson(github) }}"    
-    - name: Branch name
-      id: branch_name
-      run: |
-        echo ::set-output name=SOURCE_NAME::${GITHUB_REF#refs/*/}
-        echo ::set-output name=SOURCE_BRANCH::${GITHUB_REF#refs/heads/}
-        echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      with:
-        tag_name: $RELEASE_VERSION
-        release_name: ${{ env.RELEASE_VERSION }}
-        draft: false
-        prerelease: false 
-      env:
-        GITHUB_TOKEN: ${{ secrets.TOKEN }}
+    if: startsWith(github.ref, 'refs/tags/v')
+    steps:
+      - uses: actions/checkout@v2
+        name: Checkout repository
+      - uses: actions-rs/toolchain@v1
+        name: Set up toolchain
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - uses: Swatinem/rust-cache@v2
+        name: Cache toolchain and dependencies
+      - uses: actions-rs/cargo@v1
+        name: Build crate
+        with:
+          command: build
+          args: --release
+      - name: Prepare binaries
+        run: |
+          mkdir quincy-linux-binaries
+          mv target/release/quincy-client quincy-linux-binaries/
+          mv target/release/quincy-server quincy-linux-binaries/
+          mv target/release/quincy-users quincy-linux-binaries/
+          tar zcf quincy-linux-binaries.tar.gz -C quincy-linux-binaries .
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: quincy-linux-binaries.tar.gz
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - uses: actions-rs/toolchain@v1
-      name: Set up toolchain
-      with:
-        profile: minimal
-        toolchain: stable
-        override: true
+  # release: 
+  #   runs-on: ubuntu-latest
+  #   steps: #line 69
+  #   - uses: actions/checkout@v2
+  #     name: Checkout repository
 
-    - uses: Swatinem/rust-cache@v2
-      name: Cache toolchain and dependencies
+  #   # - name: Debug print github
+  #   #   run: echo "${{ toJson(github) }}"    
 
-    - name: Build release binary
-      run: cargo build --release
+  #   - uses: actions-rs/toolchain@v1
+  #     name: Set up toolchain
+  #     with:
+  #       profile: minimal
+  #       toolchain: stable
+  #       override: true
 
-    - uses: actions/upload-release-asset@v1
-      name: Upload quincy-client binary
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./target/release/quincy-client
-        asset_name: quincy-client
-        asset_content_type: application/octet-stream
-      env:
-        GITHUB_TOKEN: ${{ secrets.TOKEN }}        
+  #   - uses: Swatinem/rust-cache@v2
+  #     name: Cache toolchain and dependencies
 
-    - uses: actions/upload-release-asset@v1
-      name: Upload quincy-server binary
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./target/release/quincy-server
-        asset_name: quincy-server
-        asset_content_type: application/octet-stream
+  #   - name: Build release binary
+  #     run: cargo build --release
 
-    - uses: actions/upload-release-asset@v1
-      name: Upload quincy-users binary
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./target/release/quincy-users
-        asset_name: quincy-users
-        asset_content_type: application/octet-stream
+  #   - uses: actions/upload-release-asset@v1
+  #     name: Upload quincy-client binary
+  #     with:
+  #       upload_url: ${{ steps.create_release.outputs.upload_url }}
+  #       asset_path: ./target/release/quincy-client
+  #       asset_name: quincy-client
+  #       asset_content_type: application/octet-stream
+  #     env:
+  #       GITHUB_TOKEN: ${{ secrets.TOKEN }}        
+
+  #   - uses: actions/upload-release-asset@v1
+  #     name: Upload quincy-server binary
+  #     with:
+  #       upload_url: ${{ steps.create_release.outputs.upload_url }}
+  #       asset_path: ./target/release/quincy-server
+  #       asset_name: quincy-server
+  #       asset_content_type: application/octet-stream
+
+  #   - uses: actions/upload-release-asset@v1
+  #     name: Upload quincy-users binary
+  #     with:
+  #       upload_url: ${{ steps.create_release.outputs.upload_url }}
+  #       asset_path: ./target/release/quincy-users
+  #       asset_name: quincy-users
+  #       asset_content_type: application/octet-stream
