--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -67,7 +67,7 @@ jobs:
 
   linux-x86_64:
     name: Linux x86_64
-    runs-on: ubuntu-latest
+    runs-on: debian-latest
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - uses: actions/checkout@v2
