--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -67,7 +67,7 @@ jobs:
 
   linux-x86_64:
     name: Linux x86_64
-    runs-on: debian-latest
+    runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - uses: actions/checkout@v2
@@ -85,7 +85,7 @@ jobs:
         name: Build crate
         with:
           command: build
-          args: --release
+          args: --release --target x86_64-unknown-linux-musl
       - name: Prepare binaries
         run: |
           mkdir quincy-linux-binaries
