--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -72,6 +72,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         name: Checkout repository
+      - uses: awalsh128/cache-apt-pkgs-action@v1
+        name: apt musl-tools
+        with:
+          packages: musl-tools # provides musl-gcc
+          version: 1.0        
       - uses: actions-rs/toolchain@v1
         name: Set up toolchain
         with:
