--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -93,6 +93,7 @@ jobs:
           args: --release --target x86_64-unknown-linux-musl
       - name: Prepare binaries
         run: |
+          find target/release
           mkdir quincy-linux-binaries
           mv target/release/quincy-client quincy-linux-binaries/
           mv target/release/quincy-server quincy-linux-binaries/
