--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -91,6 +91,10 @@ jobs:
         uses: gmiam/rust-musl-action@master
         with:
           args: cargo build --target $BUILD_TARGET --release
+      - uses: actions/upload-artifact@v2
+        with:
+          name: quincy
+          path: target/x86_64-unknown-linux-musl/release/quincy*
       - name: Prepare binaries
         run: |
           find target/release
