--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -90,7 +90,7 @@ jobs:
       - name: Build-musl
         uses: gmiam/rust-musl-action@master
         with:
-          args: cargo build --target $BUILD_TARGET --release
+          args: cargo build --target x86_64-unknown-linux-musl --release
       - uses: actions/upload-artifact@v2
         with:
           name: quincy
