--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -66,7 +66,7 @@ jobs:
  
 
   linux-x86_64:
-    name: Linux x86_64
+    name: Release Linux x86_64
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
