--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -8,62 +8,67 @@ on:
   pull_request:
 
 jobs:
-  # test:
-  #   strategy:
-  #     matrix:
-  #       os: [ubuntu-latest]
-  #       rust: [stable, nightly]
-  #   runs-on: ${{ matrix.os }}
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #       name: Checkout repository
-  #     - uses: actions-rs/toolchain@v1
-  #       name: Set up toolchain
-  #       with:
-  #         profile: minimal
-  #         toolchain: ${{ matrix.rust }}
-  #         override: true
-  #     - uses: Swatinem/rust-cache@v2
-  #       name: Cache toolchain and dependencies
-  #     - uses: actions-rs/cargo@v1
-  #       name: Build crate
-  #       with:
-  #         command: build
-  #         args: --all-targets
-  #     - uses: actions-rs/cargo@v1
-  #       name: Test crate
-  #       with:
-  #         command: test
+  test:
+    strategy:
+      matrix:
+#        unnecessary until macos-latest runs on arm64 arch
+#        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest]
+        rust: [stable, nightly]
 
-  # lint:
-  #   strategy:
-  #     matrix:
-  #       os: [ubuntu-latest]
-  #       rust: [stable, nightly]
-  #   runs-on: ${{ matrix.os }}
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #       name: Checkout repository
-  #     - uses: actions-rs/toolchain@v1
-  #       name: Set up toolchain
-  #       with:
-  #         profile: minimal
-  #         toolchain: ${{ matrix.rust }}
-  #         override: true
-  #         components: rustfmt, clippy
-  #     - uses: Swatinem/rust-cache@v2
-  #       name: Cache toolchain and dependencies
-  #     - uses: actions-rs/cargo@v1
-  #       name: Check code with cargo fmt
-  #       with:
-  #         command: fmt
-  #         args: --all -- --check
-  #     - uses: actions-rs/cargo@v1
-  #       name: Check code with cargo clippy
-  #       with:
-  #         command: clippy
-  #         args: --all-targets -- -D warnings
- 
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v2
+        name: Checkout repository
+      - uses: actions-rs/toolchain@v1
+        name: Set up toolchain
+        with:
+          profile: minimal
+          toolchain: ${{ matrix.rust }}
+          override: true
+      - uses: Swatinem/rust-cache@v2
+        name: Cache toolchain and dependencies
+      - uses: actions-rs/cargo@v1
+        name: Build crate
+        with:
+          command: build
+          args: --all-targets
+      - uses: actions-rs/cargo@v1
+        name: Test crate
+        with:
+          command: test
+
+  lint:
+    strategy:
+      matrix:
+#        unnecessary until macos-latest runs on arm64 arch
+#        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest]
+        rust: [stable, nightly]
+
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v2
+        name: Checkout repository
+      - uses: actions-rs/toolchain@v1
+        name: Set up toolchain
+        with:
+          profile: minimal
+          toolchain: ${{ matrix.rust }}
+          override: true
+          components: rustfmt, clippy
+      - uses: Swatinem/rust-cache@v2
+        name: Cache toolchain and dependencies
+      - uses: actions-rs/cargo@v1
+        name: Check code with cargo fmt
+        with:
+          command: fmt
+          args: --all -- --check
+      - uses: actions-rs/cargo@v1
+        name: Check code with cargo clippy
+        with:
+          command: clippy
+          args: --all-targets -- -D warnings
 
   linux-x86_64:
     name: Release Linux x86_64
