--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -6,35 +6,35 @@ on:
   pull_request:
 
 jobs:
-#   test:
-#     strategy:
-#       matrix:
-# #        unnecessary until macos-latest runs on arm64 arch
-# #        os: [ubuntu-latest, macos-latest]
-#         os: [ubuntu-latest]
-#         rust: [stable, nightly]
+  test:
+    strategy:
+      matrix:
+#        unnecessary until macos-latest runs on arm64 arch
+#        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest]
+        rust: [stable, nightly]
 
-#     runs-on: ${{ matrix.os }}
-#     steps:
-#       - uses: actions/checkout@v2
-#         name: Checkout repository
-#       - uses: actions-rs/toolchain@v1
-#         name: Set up toolchain
-#         with:
-#           profile: minimal
-#           toolchain: ${{ matrix.rust }}
-#           override: true
-#       - uses: Swatinem/rust-cache@v2
-#         name: Cache toolchain and dependencies
-#       - uses: actions-rs/cargo@v1
-#         name: Build crate
-#         with:
-#           command: build
-#           args: --all-targets
-#       - uses: actions-rs/cargo@v1
-#         name: Test crate
-#         with:
-#           command: test
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v2
+        name: Checkout repository
+      - uses: actions-rs/toolchain@v1
+        name: Set up toolchain
+        with:
+          profile: minimal
+          toolchain: ${{ matrix.rust }}
+          override: true
+      - uses: Swatinem/rust-cache@v2
+        name: Cache toolchain and dependencies
+      - uses: actions-rs/cargo@v1
+        name: Build crate
+        with:
+          command: build
+          args: --all-targets
+      - uses: actions-rs/cargo@v1
+        name: Test crate
+        with:
+          command: test
 
 #   lint:
 #     strategy:
