--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,10 +10,10 @@ on:
   pull_request:
 
 jobs:
-  release:
+  linux-release:
     name: Release Linux x86_64
     runs-on: ubuntu-latest
-    # if: startsWith(github.ref, 'refs/tags/v')
+    if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - uses: actions/checkout@v2
         name: Checkout repository
@@ -36,6 +36,23 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: quincy-linux-x86_64.tar.gz
+  # release:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #       name: Checkout repository
+  #     - uses: actions-rs/toolchain@v1
+  #       name: Set up toolchain
+  #       with:
+  #         profile: minimal
+  #         toolchain: stable
+  #         override: true
+  #     - uses: Swatinem/rust-cache@v2
+  #       name: Cache toolchain and dependencies
+  #     - uses: katyo/publish-crates@v2
+  #       name: Publish crate
+  #       with:
+  #         registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
 
 permissions:
   contents: write
