--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -36,34 +36,34 @@ jobs:
         with:
           command: test
 
-#   lint:
-#     strategy:
-#       matrix:
-# #        unnecessary until macos-latest runs on arm64 arch
-# #        os: [ubuntu-latest, macos-latest]
-#         os: [ubuntu-latest]
-#         rust: [stable, nightly]
+  lint:
+    strategy:
+      matrix:
+#        unnecessary until macos-latest runs on arm64 arch
+#        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest]
+        rust: [stable, nightly]
 
-#     runs-on: ${{ matrix.os }}
-#     steps:
-#       - uses: actions/checkout@v2
-#         name: Checkout repository
-#       - uses: actions-rs/toolchain@v1
-#         name: Set up toolchain
-#         with:
-#           profile: minimal
-#           toolchain: ${{ matrix.rust }}
-#           override: true
-#           components: rustfmt, clippy
-#       - uses: Swatinem/rust-cache@v2
-#         name: Cache toolchain and dependencies
-#       - uses: actions-rs/cargo@v1
-#         name: Check code with cargo fmt
-#         with:
-#           command: fmt
-#           args: --all -- --check
-#       - uses: actions-rs/cargo@v1
-#         name: Check code with cargo clippy
-#         with:
-#           command: clippy
-#           args: --all-targets -- -D warnings
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v2
+        name: Checkout repository
+      - uses: actions-rs/toolchain@v1
+        name: Set up toolchain
+        with:
+          profile: minimal
+          toolchain: ${{ matrix.rust }}
+          override: true
+          components: rustfmt, clippy
+      - uses: Swatinem/rust-cache@v2
+        name: Cache toolchain and dependencies
+      - uses: actions-rs/cargo@v1
+        name: Check code with cargo fmt
+        with:
+          command: fmt
+          args: --all -- --check
+      - uses: actions-rs/cargo@v1
+        name: Check code with cargo clippy
+        with:
+          command: clippy
+          args: --all-targets -- -D warnings
